crates/carta/tests/snapshots/golden_writer__latex__table__table-wide-unicode.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{\def\LTcaptype{none} % do not increment counter
\begin{longtable}[]{@{}ll@{}}
\toprule\noalign{}
項目 & 値 \\
\midrule\noalign{}
\endhead
\bottomrule\noalign{}
\endlastfoot
名前 & 漢字テキスト \\
x & y \\
\end{longtable}
}
